# apt-search

./: README.md  pyproject.toml
apt_search/: __main__.py  main.py
