[tool.poetry]
name = "apt-search"
version = "0.1.3"
description = "Search Ubuntu packages."
authors = ["David Härer <david@familie-haerer.de>"]
readme = "README.md"
homepage = "https://github.com/DavidHeresy/apt-search"
license = "MIT"

[tool.poetry.scripts]
apt-search = "apt_search.main:app"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
typer = "^0.7.0"
httpx = "^0.23.3"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
